# RS2-Quoridor

./: .gitignore  CMakeLists.txt  README.md  calibration_poses.txt  camera_intrinsics.json  index.html  package.xml
Scripts/: a_star.py
control/: CMakeLists.txt  control.cpp  package.xml  pose_test.cpp
control/launch/: system.launch.py
control/scripts/: camera_node
control/src/: calibration_move.cpp  control.cpp  get_pose.cpp  gripper.cpp  photo_capture.cpp  pose_test.cpp  poses.cpp  record_waypoints.cpp  replay_and_save.cpp  save_current_state.cpp
launch/: system.launch.py
log/: latest_build
perception/: camera_intrinsics.json  circle_coords.txt  grid_coords.txt  package.xml  pawn_coords (Copy 2).txt  pawn_coords (copy).txt  pawn_coords.txt  poses (copy).txt  poses.txt  setup.py  wall_coords (Copy 2).txt  wall_coords (copy).txt  wall_coords.txt
perception/launch/: perception.launch.py
perception/perception/: ar_node.py  camera_node.py  circle_detector_node.py  coordinate_node.py  grid_detector_node.py  perception_node.py
quoridor_ai_move/: README.md  package.xml  setup.cfg  setup.py
quoridor_ai_move/launch/: ai_move.launch.py  play_vs_ai.launch.py  train_ros.launch.py  train_vs_minimax_ros.launch.py
quoridor_ai_move/quoridor_ai_move/: agent.py  ai_move_node.py  encoder.py  mcts.py  minimax_policy.py  model.py  network.py  quoridor_utils.py  replay_buffer.py  reward.py  self_play.py  train.py  train_ros.py  train_vs_az.py  train_vs_minimax.py  train_vs_model.py
quoridor_alphazero/: Challenger_VS_AlphaZero_README.md  README.md  package.xml  setup.cfg  setup.py
quoridor_alphazero/launch/: play_vs_az.launch.py
quoridor_alphazero/quoridor_alphazero/: ai_move_node.py  encoder.py  loss_memory.py  online_train.py  replay_buffer.py  self_play.py  train backup.py  train.py  train_distributed.py  train_vs_alphazero.py
quoridor_benchmark/: README.md  example_no_weights.py  pyproject.toml
quoridor_benchmark/benchmark_output/: h2h.csv  report.txt  results.json
quoridor_benchmark/quoridor_benchmark/: __main__.py  agents.py  az_network.py  benchmark.py  dqn_agent.py  dqn_model.py  encoder.py  match.py  mcts.py  minimax_policy.py  report.py
quoridor_benchmark/results/: h2h.csv  match_log.csv  report.txt  results.json
quoridor_game/: package.xml  setup.cfg  setup.py
quoridor_game/quoridor_game/: game_state.py  move_decision.py  quoridor_utils.py  state_manager.py  user_interface.py  web_interface.py
quoridor_game/test/: test_copyright.py  test_flake8.py  test_pep257.py
quoridor_interfaces/: CMakeLists.txt  package.xml
quoridor_interfaces/action/: BotMove.action
quoridor_interfaces/msg/: Board.msg  Move.msg  ShortestPaths.msg  Wall.msg
quoridor_interfaces/srv/: ComputeMove.srv
quoridor_move_decision/: CMakeLists.txt  package.xml
quoridor_move_decision/include/quoridor_move_decision/: board.hpp
quoridor_move_decision/src/: board.cpp  move_decision_node.cpp
scripts/: board_update.py  calibration.py  circles_only.py  full_board.py  grid_only.py  perception.py  white_square_detection.py
src/: control.cpp  get_pose.cpp  gripper.cpp  perception.py  photo_capture.hpp  pose_test.cpp
static/css/: index.css
static/js/: index.js
