<?xml version="1.0"?>
<package format="3">
  <name>control</name>
  <version>0.0.0</version>
  <description>MoveIt control node for UR3e + OnRobot gripper</description>

  <maintainer email="b.n.sudusinghe@gmail.com">binada</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>opencv4</depend>
  <depend>realsense2</depend> -->

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>quoridor_interfaces</depend>

  <build_depend>librealsense2</build_depend>
  <exec_depend>librealsense2</exec_depend>
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>