[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quoridor-benchmark"
version = "1.0.0"
description = "Round-robin benchmark suite for Quoridor AI agents (Engine, DQN, AlphaZero)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
neural = [
    "tensorflow>=2.12",
]

[project.scripts]
quoridor-benchmark = "quoridor_benchmark.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quoridor_benchmark*"]
